kubernetes/traefik/f-auth.yaml
# Forward authentication to example.com
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: job-auth
spec:
  forwardAuth:
    address: https://job.minikube:31030/auth
