kubernetes/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.ingress.kubernetes.io/rewrite-target: /auth
spec:
  rules:
  - host: job.minikube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
